--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
   connectivity_plus: ^3.0.6
+  cupertino_icons: ^1.0.2
   dio: ^5.1.1
   expandable: ^5.0.1
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
   fluttertoast: ^8.2.1
+  freezed_annotation: ^2.2.0
   get: ^4.6.5
   google_fonts: ^4.0.4
   intl: ^0.18.1
@@ -43,13 +45,16 @@ dependencies:
   pin_code_fields: ^7.4.0
   pretty_dio_logger: ^1.3.1
   provider: ^6.0.5
+  riverpod: ^2.3.6
   shared_preferences: ^2.1.0
   string_validator: ^1.0.0
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
